<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:text="@string/eletro_start"
        android:textSize="@dimen/title_text_size"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/BtClientes"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/button_margin"
        android:layout_gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/clientes" />

    <Button
        android:id="@+id/BtProdutos"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/button_margin"
        android:layout_gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/produtos" />

    <Button
        android:id="@+id/BtOrcamento"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/button_margin"
        android:layout_gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/orcamento" />

    <Button
        android:id="@+id/BtAgenda"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/button_margin"
        android:layout_gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/agenda" />




</LinearLayout>




