<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/InputCadastroProdutoCodigo"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="@dimen/input_padding"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/codigo"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/InputCadastroProdutoDescricao"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="@dimen/input_padding"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/descricao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/InputCadastroProdutoQuantidade"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="@dimen/input_padding"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/quantidade"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/InputCadastroProdutoPreco"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="@dimen/input_padding"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/preco"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/ButtonCadastrarProduto"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/widgets_margin"
        android:padding="@dimen/button_padding"
        android:text="@string/cadastrar_produto" />
</LinearLayout>