<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TextTituloCadastroOrcamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orcamento"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/InputNomeCadastroOrcamento"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:hint="@string/nome_completo"
        android:paddingVertical="@dimen/input_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextTituloCadastroOrcamento"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/InputCpfCadastroOrcamento"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        android:paddingVertical="@dimen/input_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputNomeCadastroOrcamento" />

    <EditText
        android:id="@+id/InputEmailCadastroOrcamento"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingVertical="@dimen/input_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputCpfCadastroOrcamento" />

    <EditText
        android:id="@+id/InputTelefoneCadastroOrcamento"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:paddingVertical="@dimen/input_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEmailCadastroOrcamento" />

    <Button
        android:id="@+id/ButtonOrcamentoCadastrar"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/cadastrar_orcamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputTelefoneCadastroOrcamento"
        app:layout_constraintVertical_bias="0.37" />

</androidx.constraintlayout.widget.ConstraintLayout>