<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayProduto"
        android:layout_width="413dp"
        android:layout_height="94dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TxtDescProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao_do_produto"
            app:layout_constraintBottom_toTopOf="@+id/cifrao"
            app:layout_constraintStart_toStartOf="@+id/cifrao" />

        <TextView
            android:id="@+id/TxtPrecoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/preco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cifrao"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/quantidade"
            app:layout_constraintStart_toStartOf="@+id/cifrao"
            app:layout_constraintTop_toBottomOf="@+id/cifrao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/em_estoque"
            app:layout_constraintStart_toEndOf="@+id/quantidade"
            app:layout_constraintTop_toTopOf="@+id/quantidade" />

        <TextView
            android:id="@+id/cifrao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cifrao"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>